@@ -1,3 +1,7 @@
+2008-02-21 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added Philipp Klaus Krause to the list of developers
+
 2007-10-30 Borut Razem <borut.razem AT siol.net>
 
 	* left_menu.inc: updated left menu
